--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,11 @@
 img {
   height:100%;
   width:100%;
+  border: 5px gray solid;
+}
+img:hover {
   border: 10px black solid;
 }
-
 h1{
   color: blue;
 }
@@ -18,4 +20,8 @@ h1{
 
 .red-background {
   background-color: red;
+}
+
+.purple {
+  background-color: purple;
 }
